crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__self_closing_div.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(\"<div/>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><div></div></div>`)
}
