crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__static_class_plus_v_bind_class.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div class=\"foo\" :class=\"bar\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><div class="foo"${_ssrRenderClass(_ctx.bar)}></div></div>`)
}
