crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__v_bind_object.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div v-bind=\"obj\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><div${_ssrRenderAttrs(_ctx.obj)}></div></div>`)
}
