crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__void_element.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(\"<input>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><input></div>`)
}
